syntax = "proto3";
package users;
import "base.proto";
import "user.proto";
import "profile.proto";

message IndividualRecord {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 userId = 7;
  optional int32 profileId = 8;
  optional User user = 9;
  optional Profile profile = 10;
}
